[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/GimbalCamera.gd" type="Script" id=1]
[ext_resource path="res://UI.theme" type="Theme" id=2]
[ext_resource path="res://Scripts/ViewportController.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Global.gd" type="Script" id=4]
[ext_resource path="res://Scripts/FilePick.gd" type="Script" id=6]
[ext_resource path="res://images/cil-image-plus.svg" type="Texture" id=7]
[ext_resource path="res://images/cil-save.svg" type="Texture" id=8]
[ext_resource path="res://Scripts/FolderPick.gd" type="Script" id=9]
[ext_resource path="res://images/cil-folder-open.svg" type="Texture" id=10]
[ext_resource path="res://images/cil-reload.svg" type="Texture" id=11]
[ext_resource path="res://Config.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=13]
[ext_resource path="res://Particle.tscn" type="PackedScene" id=14]

[sub_resource type="Environment" id=5]
background_mode = 1
background_color = Color( 0.215686, 0.231373, 0.254902, 1 )

[sub_resource type="World" id=6]
environment = SubResource( 5 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
particleScene = ExtResource( 14 )

[node name="SettingsPanel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 400.0
theme = ExtResource( 2 )

[node name="Settings" type="VBoxContainer" parent="SettingsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Paths" type="VBoxContainer" parent="SettingsPanel/Settings"]
margin_right = 390.0
margin_bottom = 62.0

[node name="Input" type="HBoxContainer" parent="SettingsPanel/Settings/Paths"]
margin_right = 390.0
margin_bottom = 29.0
script = ExtResource( 6 )

[node name="InputPath" type="LineEdit" parent="SettingsPanel/Settings/Paths/Input"]
margin_right = 352.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.5
theme = ExtResource( 2 )
placeholder_text = "Pick image to convert"

[node name="FileButton" type="Button" parent="SettingsPanel/Settings/Paths/Input"]
margin_left = 356.0
margin_right = 390.0
margin_bottom = 29.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="FileDialog" type="FileDialog" parent="SettingsPanel/Settings/Paths/Input/FileButton"]
margin_right = 331.0
margin_bottom = 150.0
window_title = "Open File(s)"
resizable = true
dialog_autowrap = true
mode = 1
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )

[node name="Output" type="HBoxContainer" parent="SettingsPanel/Settings/Paths"]
margin_top = 33.0
margin_right = 390.0
margin_bottom = 62.0
script = ExtResource( 9 )

[node name="OutputPath" type="LineEdit" parent="SettingsPanel/Settings/Paths/Output"]
margin_right = 352.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.5
theme = ExtResource( 2 )
placeholder_text = "Pick folder to save to"

[node name="FolderButton" type="Button" parent="SettingsPanel/Settings/Paths/Output"]
margin_left = 356.0
margin_right = 390.0
margin_bottom = 29.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
icon = ExtResource( 10 )
flat = true
icon_align = 1
expand_icon = true

[node name="FolderDialog" type="FileDialog" parent="SettingsPanel/Settings/Paths/Output/FolderButton"]
margin_right = 331.0
margin_bottom = 150.0
window_title = "Open a Directory"
resizable = true
dialog_autowrap = true
mode = 2
access = 2

[node name="ViewImage" type="HBoxContainer" parent="SettingsPanel/Settings"]
visible = false
margin_top = 66.0
margin_right = 390.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="SettingsPanel/Settings/ViewImage"]
margin_top = 3.0
margin_right = 180.0
margin_bottom = 22.0
text = "Image to show in preview"

[node name="Option" type="OptionButton" parent="SettingsPanel/Settings/ViewImage"]
margin_left = 184.0
margin_right = 390.0
margin_bottom = 25.0
size_flags_horizontal = 3
clip_text = true

[node name="General" type="GridContainer" parent="SettingsPanel/Settings"]
margin_top = 66.0
margin_right = 390.0
margin_bottom = 122.0
theme = ExtResource( 2 )
columns = 2

[node name="Preview" type="CheckBox" parent="SettingsPanel/Settings/General"]
margin_right = 193.0
margin_bottom = 27.0
size_flags_horizontal = 3
pressed = true
text = " Preview"

[node name="Transparent" type="CheckBox" parent="SettingsPanel/Settings/General"]
margin_left = 197.0
margin_right = 390.0
margin_bottom = 27.0
size_flags_horizontal = 3
pressed = true
text = " Ignore Transparent"

[node name="Reset" type="Button" parent="SettingsPanel/Settings/General"]
margin_top = 31.0
margin_right = 193.0
margin_bottom = 56.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = " Reset Camera"
icon = ExtResource( 11 )
flat = true
align = 0
expand_icon = true

[node name="Generate" type="Button" parent="SettingsPanel/Settings/General"]
margin_left = 197.0
margin_top = 31.0
margin_right = 390.0
margin_bottom = 56.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = " Generate"
icon = ExtResource( 8 )
flat = true
align = 0
expand_icon = true

[node name="Label" type="Label" parent="SettingsPanel/Settings"]
margin_left = 124.0
margin_top = 126.0
margin_right = 265.0
margin_bottom = 145.0
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource( 2 )
text = "Generation Settings"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsPanel/Settings"]
margin_top = 149.0
margin_right = 390.0
margin_bottom = 390.0
size_flags_vertical = 3
theme = ExtResource( 2 )
scroll_horizontal_enabled = false

[node name="Config" parent="SettingsPanel/Settings/ScrollContainer" instance=ExtResource( 12 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 378.0
margin_bottom = 555.0

[node name="RightHalf" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0

[node name="ViewportContainer" type="ViewportContainer" parent="RightHalf"]
margin_right = 200.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
stretch = true
script = ExtResource( 3 )

[node name="Preview" type="Viewport" parent="RightHalf/ViewportContainer"]
unique_name_in_owner = true
size = Vector2( 200, 260 )
size_override_stretch = true
own_world = true
world = SubResource( 6 )
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="GimbalCamera" type="Spatial" parent="RightHalf/ViewportContainer/Preview"]
script = ExtResource( 1 )

[node name="Gimbal" type="Spatial" parent="RightHalf/ViewportContainer/Preview/GimbalCamera"]

[node name="Camera" type="Camera" parent="RightHalf/ViewportContainer/Preview/GimbalCamera/Gimbal"]
current = true

[node name="ImmediateGeometry" type="ImmediateGeometry" parent="RightHalf/ViewportContainer/Preview"]
script = ExtResource( 13 )

[node name="Particle" parent="RightHalf/ViewportContainer/Preview" instance=ExtResource( 14 )]
visible = false

[node name="PlaneFlip" type="Spatial" parent="RightHalf/ViewportContainer/Preview"]

[node name="Rotation" type="Spatial" parent="RightHalf/ViewportContainer/Preview/PlaneFlip"]

[node name="Align" type="Spatial" parent="RightHalf/ViewportContainer/Preview/PlaneFlip/Rotation"]

[node name="OutputPanel" type="Panel" parent="RightHalf"]
margin_top = 272.0
margin_right = 200.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="RightHalf/OutputPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Output" type="RichTextLabel" parent="RightHalf/OutputPanel/ScrollContainer"]
unique_name_in_owner = true
margin_right = 195.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_entered" from="SettingsPanel/Settings/Paths/Input/InputPath" to="." method="FileSelected"]
[connection signal="pressed" from="SettingsPanel/Settings/Paths/Input/FileButton" to="SettingsPanel/Settings/Paths/Input" method="showDialog"]
[connection signal="files_selected" from="SettingsPanel/Settings/Paths/Input/FileButton/FileDialog" to="." method="FilesSelected"]
[connection signal="files_selected" from="SettingsPanel/Settings/Paths/Input/FileButton/FileDialog" to="SettingsPanel/Settings/Paths/Input" method="setPaths"]
[connection signal="pressed" from="SettingsPanel/Settings/Paths/Output/FolderButton" to="SettingsPanel/Settings/Paths/Output" method="showDialog"]
[connection signal="dir_selected" from="SettingsPanel/Settings/Paths/Output/FolderButton/FolderDialog" to="SettingsPanel/Settings/Paths/Output" method="setPath"]
[connection signal="item_selected" from="SettingsPanel/Settings/ViewImage/Option" to="." method="FileChanged"]
[connection signal="toggled" from="SettingsPanel/Settings/General/Preview" to="." method="Preview"]
[connection signal="toggled" from="SettingsPanel/Settings/General/Transparent" to="." method="_on_Transparent"]
[connection signal="pressed" from="SettingsPanel/Settings/General/Reset" to="." method="_on_Reset"]
[connection signal="pressed" from="SettingsPanel/Settings/General/Generate" to="." method="Generate"]
[connection signal="Move" from="SettingsPanel/Settings/ScrollContainer/Config" to="." method="_on_Config_Move"]
[connection signal="ParticleSize" from="SettingsPanel/Settings/ScrollContainer/Config" to="." method="_on_Config_ParticleSize"]
[connection signal="reGenerate" from="SettingsPanel/Settings/ScrollContainer/Config" to="." method="_on_Config_reGenerate"]
